# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-ui"
description = "Desktop UI application providing real-time visualization of ecoPrimals ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-graph = { path = "../petal-tongue-graph", features = ["egui-render"] }
petal-tongue-api = { path = "../petal-tongue-api" }
petal-tongue-animation = { path = "../petal-tongue-animation", features = ["egui"] }
petal-tongue-telemetry = { path = "../petal-tongue-telemetry" }
petal-tongue-discovery = { path = "../petal-tongue-discovery" }
petal-tongue-entropy = { path = "../petal-tongue-entropy" }
petal-tongue-adapters = { path = "../petal-tongue-adapters" }  # NEW: Adapter system
petal-tongue-ipc = { path = "../petal-tongue-ipc" }  # IPC with tarpc PRIMARY
petal-tongue-scene = { path = "../petal-tongue-scene" }  # Declarative scene graph + modality
doom-core = { path = "../doom-core", optional = true }  # Doom integration for platform testing

# Registry/discovery and compute providers are discovered at runtime via IPC
# (Unix sockets; tarpc primary, JSON-RPC fallback) through
# petal-tongue-discovery::DiscoveryServiceClient.
# NO compile-time dependency on other primals - TRUE PRIMAL sovereignty!

tokio = { workspace = true }
tokio-tungstenite = "0.21"  # Pure Rust WebSocket (Collaborative Intelligence)
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"  # For SSE stream consumption (StreamExt)
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }  # CLI argument parsing for scenario loading
chrono = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }  # For table widgets in process viewer
# EVOLVED: libc removed - framebuffer uses sysfs for dimensions (100% safe Rust)
# system_info uses rustix (petal-tongue-core)
uuid = { version = "1.7", features = ["v4", "serde"] }  # For graph node IDs

# Pure Rust Audio (TRUE PRIMAL sovereignty - Audio Canvas!)
# EVOLUTION COMPLETE: Direct hardware access (like WGPU for graphics!)
# NO rodio, NO cpal, NO ALSA - just raw /dev/snd device access!
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav"] }  # Pure Rust audio decoding
# winit: Links to X11/Wayland C libs (x11-dl, wayland-client). REQUIRED: petal-tongue-ui is a GUI app;
# cannot use terminal-only detection. Used for window creation and display dimension discovery.
winit = "0.30"

# ✅ EVOLUTION COMPLETE:
# - AudioCanvas provides direct /dev/snd access (Linux)
# - symphonia provides pure Rust audio decoding (MP3, WAV, FLAC)
# - Zero C dependencies for audio!
# See: src/audio_canvas.rs for implementation

# External tool integrations - ecoBin v3.0: pure Rust /proc parsing (see proc_stats.rs)
rustix = { version = "0.38", features = ["param"] }  # Runtime page_size() for /proc RSS

# Pure Rust display system (crossterm = 100% pure Rust)
crossterm = "0.29"  # Terminal input/output for sensors (rustix backend, no libc)
terminal_size = "0.4"  # Terminal dimensions for screen sensor
async-trait = "0.1"  # For DisplayBackend trait
tiny-skia = "0.11"  # For egui → pixel rendering
epaint = { version = "0.29", default-features = false }  # For egui tessellation
png = "0.17"  # For pixel buffer conversion

# Pure Rust Display Backends
softbuffer = { version = "0.4", optional = true }
pixels = { version = "0.13", optional = true }
# EVOLVED: nix removed - framebuffer uses configured dimensions + sysfs (screen.rs)
# No ioctl needed; rustix available in core if future ioctl required

# For WASM integration (remote compute provider)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d"] }

[features]
# Default: Auto-detect best backend (prefer capability-discovered, fall back to eframe)
# mock OFF by default (sovereignty). Use --features mock for dev/demo. Tests: cargo test --features mock
default = ["ui-auto"]

# Backend selection features (ecoBlossom evolution!)
ui-auto = ["ui-eframe"]  # Auto-detect (currently just eframe, will add compute-provider backend)
ui-eframe = []           # eframe backend (current, has C deps)
discovered-display = []  # Capability-discovered display (display::backends::discovered_display_v2 via biomeOS)

# Test helpers (env var manipulation, etc.) - only for cargo test --features test-fixtures
test-fixtures = ["petal-tongue-core/test-fixtures"]

# Optional feature flags used in cfg (allow cfg checks to pass)
audio = []   # Audio sensor/provider features
# Experimental / incomplete backends (PipeWire–PulseAudio socket protocol; direct ALSA ioctl path).
# Off by default so normal builds do not register non-functional discovery entries.
audio-socket = []
audio-direct = []
window = []  # Window-related display features
doom = ["dep:doom-core"]  # Doom integration for platform testing

# Mock provider for dev/test only - NEVER use in production (sovereignty compliance)
# When disabled: biomeOS unavailable → empty panels. When enabled: graceful degradation with demo data.
# Enables DemoVisualizationProvider, DemoDeviceProvider, and BiomeOSClient demo mode.
mock = ["petal-tongue-discovery/test-fixtures", "petal-tongue-api/test-fixtures", "petal-tongue-core/test-fixtures"]

# Legacy features (maintained for compatibility)
external-display = ["ui-eframe"]  # Alias for ui-eframe
software-rendering = ["softbuffer", "pixels"]
compute-wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys"]

# ✅ EVOLUTION COMPLETE: Audio is now pure Rust via AudioCanvas
# No ALSA dependencies, no build-time C libraries required
# Audio features work out of the box on all platforms:
# - Linux: Direct /dev/snd access (AudioCanvas)
# - macOS: CoreAudio (via system APIs)
# - Windows: WASAPI (via system APIs)

[dev-dependencies]
anyhow = { workspace = true }  # Integration tests and examples
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }  # For tests that use test_fixtures (run: cargo test --features test-fixtures or --features mock)
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
proptest = { workspace = true }
