# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-ui"
description = "Desktop UI application providing real-time visualization of ecoPrimals ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-graph = { path = "../petal-tongue-graph", features = ["egui-render"] }
petal-tongue-api = { path = "../petal-tongue-api" }
petal-tongue-animation = { path = "../petal-tongue-animation", features = ["egui"] }
petal-tongue-telemetry = { path = "../petal-tongue-telemetry" }
petal-tongue-discovery = { path = "../petal-tongue-discovery" }
petal-tongue-entropy = { path = "../petal-tongue-entropy" }
petal-tongue-adapters = { path = "../petal-tongue-adapters" }  # NEW: Adapter system
petal-tongue-ipc = { path = "../petal-tongue-ipc" }  # IPC with tarpc PRIMARY
petal-tongue-scene = { path = "../petal-tongue-scene" }  # Declarative scene graph + modality
doom-core = { path = "../doom-core", optional = true }  # Doom integration for platform testing

# Registry/discovery and compute providers are discovered at runtime via IPC
# (Unix sockets; tarpc primary, JSON-RPC fallback) through
# petal-tongue-discovery::DiscoveryServiceClient.
# NO compile-time dependency on other primals - TRUE PRIMAL sovereignty!

tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }  # CLI argument parsing for scenario loading
chrono = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }  # For table widgets in process viewer
uuid = { workspace = true }

# Pure Rust audio: AudioCanvas (/dev/snd) + symphonia (MP3/WAV/FLAC decode)
symphonia = { workspace = true, features = ["mp3", "wav"] }
# PG-48: winit needed for platform extension traits (with_any_thread)
winit = { workspace = true }

# External tool integrations - ecoBin v3.0: pure Rust /proc parsing (see proc_stats.rs)
rustix = { workspace = true, features = ["param"] }  # Runtime page_size() for /proc RSS

# Pure Rust display system (crossterm = 100% pure Rust)
crossterm = { workspace = true }
terminal_size = { workspace = true }
tiny-skia = { workspace = true }
epaint = { workspace = true }


[features]
# Default: Auto-detect best backend (prefer capability-discovered, fall back to eframe)
# mock OFF by default (sovereignty). Use --features mock for dev/demo. Tests: cargo test --features mock
default = ["ui-auto"]

# Backend selection features (ecoBlossom evolution!)
ui-auto = ["ui-eframe"]  # Auto-detect (currently just eframe, will add compute-provider backend)
ui-eframe = []           # eframe backend (current, has C deps)
discovered-display = []  # Capability-discovered display (display::backends::discovered_display_v2 via biomeOS)

# Test helpers (env var manipulation, etc.) - only for cargo test --features test-fixtures
test-fixtures = ["petal-tongue-core/test-fixtures"]

# Optional feature flags used in cfg (allow cfg checks to pass)
audio = []   # Audio sensor/provider features
# Experimental / incomplete backends (PipeWire–PulseAudio socket protocol; direct ALSA ioctl path).
# Off by default so normal builds do not register non-functional discovery entries.
audio-socket = []
audio-direct = []
doom = ["dep:doom-core"]  # Doom integration for platform testing

# Mock provider for dev/test only - NEVER use in production (sovereignty compliance)
# When disabled: biomeOS unavailable → empty panels. When enabled: graceful degradation with demo data.
# Enables DemoVisualizationProvider, DemoDeviceProvider, and BiomeOSClient demo mode.
mock = ["petal-tongue-discovery/test-fixtures", "petal-tongue-api/test-fixtures", "petal-tongue-core/test-fixtures"]


[dev-dependencies]
anyhow = "1.0"  # Integration tests and examples
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }  # For tests that use test_fixtures (run: cargo test --features test-fixtures or --features mock)
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
proptest = { workspace = true }
