[package]
name = "mock-biomeos"
version = "0.1.0"
edition = "2024"

# Not part of petalTongue workspace - standalone tool
[workspace]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching (hot reload)
notify = "6.1"

# Error handling
anyhow = "1.0"

# Time
chrono = "0.4"

