# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "mock-biomeos"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
