[package]
name = "petal-tongue-modalities"
description = "GUI Modalities for petalTongue Universal Rendering Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Core
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-ui-core = { path = "../petal-tongue-ui-core" }
petal-tongue-graph = { path = "../petal-tongue-graph" }
petal-tongue-animation = { path = "../petal-tongue-animation" }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Terminal rendering
crossterm = "0.27"

# Optional GUI (Tier 3)
egui = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }

[features]
default = ["terminal"]
terminal = []
egui-gui = ["egui", "eframe"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

